# panda-pixel-rs

./: .gitignore  .workflow-test  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  build-frontend-wrapper.cmd  build-frontend-wrapper.sh  build-frontend.cmd  build-frontend.ps1  build-frontend.sh  dev-frontend.cmd  dev-frontend.ps1  dev-frontend.sh  justfile  nextest.toml  prek.toml  rust-toolchain.toml
.cursor/: release-build.mdc
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
apps/api/: Cargo.toml
apps/api/src/: config.rs  lib.rs  main.rs  routes.rs
apps/api/tests/: api_tests.rs  fuzz_compression.rs  integration_tests.rs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  compression.rs  lib.rs  main.rs
apps/web/: Cargo.toml  Trunk.toml  app.rs  index.html  lib.rs  package-lock.json  package.json  state.rs  tailwind.config.js  tauri_helpers.rs  utils.rs
apps/web/components/: advanced_options.rs  compress_button.rs  error_display.rs  file_selector.rs  format_selector.rs  mod.rs  progress_bar.rs  quality_slider.rs  results_list.rs
apps/web/public/: app.css
apps/web/src/: style.css
crates/compression/: Cargo.toml
crates/compression/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
docs/: build.md  contributing.md  parity-matrix.md  roadmap.md  testing-guide.md  testing.md  troubleshooting.md
pm/bugs/: tauri-leptos-lessons-learned.md
scripts/: build-frontend.sh  dev-frontend.sh  linux-build.sh  macos-build-universal.sh  windows-build.bat  windows-build.ps1
src/: Cargo.toml  Trunk.toml  app.rs  index.html  lib.rs  state.rs  style.css  tauri_helpers.rs  utils.rs
src-tauri/: Cargo.toml  build-frontend-wrapper.sh  dev-frontend-wrapper.sh  tauri.conf.json
src-tauri/scripts/: build-frontend.sh  dev-frontend.sh
src-tauri/src/: commands.rs  compression.rs  compression_options.rs  filename_unique.rs  lib.rs  main.rs
src/backend/: mod.rs
src/components/: advanced_options.rs  collision_modal.rs  compress_button.rs  file_selector.rs  files_list.rs  mod.rs  progress_bar.rs  quality_slider.rs  results_list.rs  status_display.rs
