[workspace]
members = [
    "apps/web",
    "src-tauri",
    "apps/api",
    "crates/domain",
    "crates/compression",
]
exclude = [
    "src",
]
resolver = "2"

[workspace.package]
version = "0.1.1-alpha"
edition = "2021"

[workspace.dependencies]
# Shared dependencies
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
