[package]
name = "rust_tinypng_clone"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-http = "2.0"

# Compression dependencies
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "tiff", "ico"] }
imagequant = "4"
oxipng = "9"
mozjpeg = "0.10"
webp = "0.2"
ravif = "0.11"
rgb = "0.8"
libheif-rs = { version = "0.22", optional = true }

# Utilities
anyhow.workspace = true
rayon = "1"
walkdir = "2"
humansize = "2"
infer = "0.15"
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.0", features = ["rt-multi-thread", "fs"] }
num_cpus = "1.0"
log = "0.4"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"

[features]
default = []
heif = ["libheif-rs"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
