[package]
name = "panda_pixel_rs_desktop"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow.workspace = true
log = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "tiff", "ico", "webp"] }
imagequant = "4"
oxipng = "9"
mozjpeg = "0.10"
webp = "0.3"
ravif = "0.11"
rgb = "0.8"
zip = { version = "2", default-features = false, features = ["deflate"] }

[lib]
name = "panda_pixel_rs_desktop"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
