[package]
name = "rust_tinypng_clone_frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_meta = "0.7"
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"
log = "0.4"

[lib]
name = "rust_tinypng_clone_frontend"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
# LTO disabled for faster CI builds; enable only for final releases if needed
# lto = true
# codegen-units = 1  # Disabled for faster parallel compilation
