[package]
name = "padna_pixel_rs_frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_meta = "0.7"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["File", "FileList", "HtmlInputElement", "HtmlAnchorElement", "HtmlElement", "EventTarget", "Window", "Document", "CustomEvent", "console", "Request", "RequestInit", "RequestMode", "Response", "FormData", "Blob", "BlobPropertyBag", "Url", "Headers"] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"
log = "0.4"
async-trait = "0.1"

[lib]
name = "padna_pixel_rs_frontend"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
# LTO disabled for faster CI builds; enable only for final releases if needed
# lto = true
# codegen-units = 1  # Disabled for faster parallel compilation
