[package]
name = "compression"
version.workspace = true
edition.workspace = true

[dependencies]
domain = { path = "../domain" }
anyhow.workspace = true
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "tiff", "ico"] }
imagequant = "4"
oxipng = "9"
mozjpeg = "0.10"
webp = "0.2"
ravif = "0.11"
rgb = "0.8"
libheif-rs = { version = "0.22", optional = true }

[features]
default = []
heif = ["libheif-rs"]
