[package]
name = "rust_tinypng_clone"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-http = "2.0"

# Shared crates
domain = { path = "../../../crates/domain" }
compression = { path = "../../../crates/compression" }

# Utilities
anyhow.workspace = true
rayon = "1"
walkdir = "2"
humansize = "2"
infer = "0.15"
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.0", features = ["rt-multi-thread", "fs"] }
num_cpus = "1.0"
log = "0.4"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"

[features]
default = []
heif = ["compression/heif"]

# Profile settings moved to workspace root
