[package]
name = "panda_pixel_rs_desktop"
version = "0.1.0-alpha"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "panda_pixel_rs_desktop"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]